Style updates as well as bug fixes to the Client Programs screen.

--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -262,7 +262,171 @@
     </Content>
     <Content Include="App_Data\SideMenu.xml" />
     <Content Include="App_Data\TopMenu.xml" />
+    <Content Include="App_Themes\KetoSavage\CardView\cvLoadingOnStatusBar.gif" />
+    <Content Include="App_Themes\KetoSavage\CardView\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\CardView\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\CardView\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\CardView\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\CardView\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\CardView\styles.css" />
+    <Content Include="App_Themes\KetoSavage\CardView\stylesCompact.css" />
+    <Content Include="App_Themes\KetoSavage\Chart\Loading.gif" />
+    <Content Include="App_Themes\KetoSavage\Chart\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Editors\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\Editors\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtBinaryImageDesign.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtButtonHoverBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarButtonHBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarDayInRange.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarSelected.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarToday.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarTodayInRange.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtCalendarTodaySelected.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtDropDownBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtDropDownButtonHoverBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtSpinDecBtnBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtSpinIncBtnBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarDoubleLargeTickH.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarDoubleLargeTickV.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarDoubleSmallTickH.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarDoubleSmallTickV.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarLargeTickH.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarLargeTickV.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarSmallTickH.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarSmallTickV.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarTrackH.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\edtTrackBarTrackV.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\Editors\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\Editors\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\Editors\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Editors\stylesCompact.css" />
+    <Content Include="App_Themes\KetoSavage\GridView\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\GridView\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\GridView\gvLoadingOnStatusBar.gif" />
+    <Content Include="App_Themes\KetoSavage\GridView\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\GridView\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\GridView\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\GridView\styles.css" />
+    <Content Include="App_Themes\KetoSavage\GridView\stylesCompact.css" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheAudio.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheFlash.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheFoldMarker.png" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheNotSupported.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheVideo.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\dxheYoutube.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\heFoldGutterFolded.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\heFoldGutterOpen.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\HtmlEditor\styles.css" />
     <Content Include="App_Themes\KetoSavage\KetoSavageThemeAssembly.dll" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\-1.png" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\0.png" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\1.png" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\pgCustomizationFormBackground.gif" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\pgTVNodeLoading.gif" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\PivotGrid\styles.css" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\reLoadingOnStatusBar.gif" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\RichEdit\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\ButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\ButtonBackHover.gif" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\stylesCompact.css" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\ViewSelectorButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Scheduler\ViewSelectorButtonBackHover.gif" />
+    <Content Include="App_Themes\KetoSavage\SpellChecker\scErrorUnderline.gif" />
+    <Content Include="App_Themes\KetoSavage\SpellChecker\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Spreadsheet\TouchResize.svg" />
+    <Content Include="App_Themes\KetoSavage\TreeList\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\TreeList\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\TreeList\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\TreeList\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\TreeList\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\TreeList\styles.css" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\VerticalGrid\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Web\1x1.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\currentPage.svg" />
+    <Content Include="App_Themes\KetoSavage\Web\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\Web\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFile.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFileCheck.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFilePdf.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFilePlainText.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFilePresentation.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFileRichText.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmFileSpreadsheet.png" />
+    <Content Include="App_Themes\KetoSavage\Web\fmSplitterSeparator.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\igLoading.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\igNavBtnsBack.png" />
+    <Content Include="App_Themes\KetoSavage\Web\isLoading.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\Loading.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\mPopupBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\ncGotoBack.svg" />
+    <Content Include="App_Themes\KetoSavage\Web\pcModalBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\pDropDownButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\pDropDownButtonHoverBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\rcMapImage.svg" />
+    <Content Include="App_Themes\KetoSavage\Web\splResizingPointer.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\Web\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\Web\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\Web\styles.css" />
+    <Content Include="App_Themes\KetoSavage\Web\stylesCompact.css" />
+    <Content Include="App_Themes\KetoSavage\Web\tcScrollBtnBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tcScrollBtnDisabledBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tcScrollBtnHoverBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tcTabBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tiGotoBack.svg" />
+    <Content Include="App_Themes\KetoSavage\Web\tvElbow.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tvElbowRtl.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tvLine.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\tvNodeLoading.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\ucButtonBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\ucButtonHoverBack.gif" />
+    <Content Include="App_Themes\KetoSavage\Web\ucSlLogo.png" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\dt_sprite.png" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\dt_spriteAccessible.png" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\Loading.gif" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\pageBottomBorder.svg" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\pageLeftBorder.svg" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\pageRightBorder.svg" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\pageTopBorder.svg" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\sprite.css" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\sprite.svg" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\spriteAccessible.css" />
+    <Content Include="App_Themes\KetoSavage\XtraReports\styles.css" />
     <Content Include="bin\Content\generic.dark.custom.css" />
     <Content Include="bin\Content\Images\AquaHeader.jpg" />
     <Content Include="bin\Content\Images\BlackGlassHeader.jpg" />
@@ -453,6 +617,8 @@
     <Content Include="App_Themes\KetoSavage\MVCxUploadControl.skin" />
     <Content Include="App_Themes\KetoSavage\MVCxValidationSummary.skin" />
     <Content Include="App_Themes\KetoSavage\MVCxVerticalGrid.skin" />
+    <Content Include="App_Themes\KetoSavage\Fonts\Roboto-Medium.ttf" />
+    <Content Include="App_Themes\KetoSavage\Fonts\Roboto-Regular.ttf" />
     <None Include="Properties\PublishProfiles\file.pubxml" />
     <None Include="Properties\PublishProfiles\TestServer.pubxml" />
     <None Include="Properties\Settings.settings">
