--- a/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Parameters.config
+++ b/KetoSavageWeb/KetoSavageWeb/App_Themes/KetoSavage/Parameters.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <parameters>
-	<parameter Name="Font" Value="14px 'Roboto Regular', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif"></parameter>
-	<parameter Name="AltFont" Value="14px 'Roboto Medium', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif" Base="Font" Expression="{0};font-weight:bold"></parameter>
+	<parameter Name="Font" Value="14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif"></parameter>
+	<parameter Name="AltFont" Value="14px 'Open Sans', Helvetica, 'Droid Sans', Tahoma, Geneva, sans-serif;font-weight:bold" Base="Font" Expression="{0};font-weight:bold"></parameter>
 	<parameter Name="Base Color" Value="#000000" Type="Color"></parameter>
 	<parameter Name="CalendarTooday Color" Value="#000000" Type="Color" Base="Base Color" Expression="1,1,0.813"></parameter>
 	<parameter Name="CalendarToodaySelected Color" Value="#000000" Type="Color" Base="Base Color" Expression="1,0.769,1.121"></parameter>
