--- a/KetoSavageWeb/KetoSavageWeb/Web.config
+++ b/KetoSavageWeb/KetoSavageWeb/Web.config
@@ -23,9 +23,9 @@
     <!--<add name="NWindConnectionString" connectionString="data source=(localdb)\mssqllocaldb;attachdbfilename=|DataDirectory|\NWind.mdf;integrated security=True;connect timeout=120" providerName="System.Data.SqlClient"/>-->
     <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="KSDataConnection" connectionString="Data Source=13-01-0110;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>-->
-    <!--<add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
+    <add name="KSDataConnection" connectionString="Data Source=RD_Laptop;Initial Catalog=KSData;Integrated Security = true;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <!--<add name="KSDataConnection" connectionString="Data Source=ops-dev.savageservices.com;Initial Catalog=KSData;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
-    <add name="KSDataConnection" connectionString="Data Source=mi3-wsq3.a2hosting.com;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <!--<add name="KSDataConnection" connectionString="Data Source=mi3-wsq3.a2hosting.com;Initial Catalog=KSData;User ID=KS;Password=S4v4g3*18;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -86,7 +86,7 @@
         <add assembly="DevExpress.XtraMap.v17.2, Version=17.2.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.XtraEditors.v17.2, Version=17.2.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.XtraPrinting.v17.2, Version=17.2.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-        <!--<add assembly="KetoSavageThemeAssembly, Version=17.2.4.0, Culture=neutral, PublicKeyToken=null" />-->
+        <add assembly="KetoSavageThemeAssembly, Version=17.2.8.0, Culture=neutral, PublicKeyToken=null" />
       </assemblies>
     </compilation>
     <authentication mode="None" />
