--- a/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
+++ b/KetoSavageWeb/KetoSavageWeb/KetoSavageWeb.csproj
@@ -280,6 +280,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\NWind.mdf" />
+    <Content Include="App_Data\NWind_log.ldf">
+      <DependentUpon>NWind.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Data\SideMenu.xml" />
     <Content Include="App_Data\TopMenu.xml" />
     <Content Include="App_Themes\KetoSavage\CardView\cvLoadingOnStatusBar.gif" />
@@ -1485,6 +1488,10 @@
     <Compile Include="Migrations\201901110314427_addNotesUpdateHungerLevel.Designer.cs">
       <DependentUpon>201901110314427_addNotesUpdateHungerLevel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201901241729283_measurementTables.cs" />
+    <Compile Include="Migrations\201901241729283_measurementTables.Designer.cs">
+      <DependentUpon>201901241729283_measurementTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Abstract\UserManaged.cs" />
     <Compile Include="Models\AccountModels.cs" />
@@ -1574,6 +1581,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201901110314427_addNotesUpdateHungerLevel.resx">
       <DependentUpon>201901110314427_addNotesUpdateHungerLevel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201901241729283_measurementTables.resx">
+      <DependentUpon>201901241729283_measurementTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
